--- a/src/render_dx11/CMakeLists.txt
+++ b/src/render_dx11/CMakeLists.txt
@@ -4,6 +4,7 @@ add_library(render_dx11
     pch.h system.h)
 
 find_library(DIRECTXTK_LIBRARY DirectXTK)
+find_path(DIRECTXTK_INCLUDE DirectXTK/CommonStates.h)
 
 target_link_libraries(render_dx11
     PUBLIC
@@ -14,5 +15,7 @@ target_link_libraries(render_dx11
         d3dcompiler
         dxgi
         ${DIRECTXTK_LIBRARY})
+
+target_include_directories(render_dx11 PRIVATE ${DIRECTXTK_INCLUDE})
 
 target_precompile_headers(render_dx11 PRIVATE pch.h)
