add "api" headers for engine and render core, for easy include

--- a/src/render_core/CMakeLists.txt
+++ b/src/render_core/CMakeLists.txt
@@ -2,7 +2,10 @@ add_library(render_core
     render_config.cpp render_config.h
     i_render_context.h
     render_queue.cpp render_queue.h
-    missingno.png.h i_camera.h camera_simple_ortho.cpp camera_simple_ortho.h)
+    missingno.png.h
+    i_camera.h
+    camera_simple_ortho.cpp camera_simple_ortho.h
+    api.h)
 
 target_link_libraries(render_core
     PUBLIC
