move tracy src include from pch.cpp to CMakeLists.txt of the engine

--- a/src/engine/CMakeLists.txt
+++ b/src/engine/CMakeLists.txt
@@ -5,7 +5,8 @@ add_library(engine
     assets.cpp assets.h
     tilemap.h tilemap.cpp
     clock.cpp clock.h
-    api.h)
+    api.h
+    extern/tracy/TracyClient.cpp)
 
 target_compile_definitions(engine
     PUBLIC
