--- a/src/render_dx11/CMakeLists.txt
+++ b/src/render_dx11/CMakeLists.txt
@@ -1,7 +1,9 @@
 add_library(render_dx11
     render_context_dx11.cpp render_context_dx11.h
+    im3d_dx11.cpp im3d_dx11.h
     util.cpp util.h
-    pch.h system.h "pch.cpp")
+    pch.cpp pch.h
+    system.h)
 
 find_library(DIRECTXTK_LIBRARY DirectXTK)
 find_path(DIRECTXTK_INCLUDE DirectXTK/CommonStates.h)
