--- a/src/examples/tower_defence/CMakeLists.txt
+++ b/src/examples/tower_defence/CMakeLists.txt
@@ -1,6 +1,10 @@
 add_executable(tower_defence
     main.cpp
     tilemap.cpp tilemap.h
+    game_state.cpp game_state.h
+    map_data.cpp map_data.h
+    enemy_data.cpp enemy_data.h
+    tower_data.cpp tower_data.h
     pch.h)
 
 target_link_libraries(tower_defence
