--- a/src/examples/tower_defence/CMakeLists.txt
+++ b/src/examples/tower_defence/CMakeLists.txt
@@ -5,7 +5,7 @@ add_executable(tower_defence
     map_data.cpp map_data.h
     enemy_data.cpp enemy_data.h
     tower_data.cpp tower_data.h
-    pch.h)
+    pch.h projectile_data.cpp projectile_data.h)
 
 target_link_libraries(tower_defence
     engine
