added some helper functions for iterating on entities, not sure about them, might delete later

--- a/src/examples/tower_defence/CMakeLists.txt
+++ b/src/examples/tower_defence/CMakeLists.txt
@@ -4,7 +4,7 @@ add_executable(tower_defence
     entities.cpp entities.h
     game_state.cpp game_state.h
     map_data.cpp map_data.h
-    pch.h)
+    pch.h helper_functions.cpp helper_functions.h)
 
 target_link_libraries(tower_defence
     engine
