move some game state into a dedicated GameSession class

--- a/src/examples/tower_defence/CMakeLists.txt
+++ b/src/examples/tower_defence/CMakeLists.txt
@@ -4,7 +4,9 @@ add_executable(tower_defence
     entities.cpp entities.h
     game_state.cpp game_state.h
     map_data.cpp map_data.h
-    pch.h helper_functions.cpp helper_functions.h)
+    game_session.cpp game_session.h
+    helper_functions.cpp helper_functions.h
+    pch.h)
 
 target_link_libraries(tower_defence
     engine
