remove unnecessary ICamera abstraction

--- a/src/render_core/CMakeLists.txt
+++ b/src/render_core/CMakeLists.txt
@@ -2,8 +2,7 @@ add_library(render_core
     i_render_context.h
     sprite_draw_list.cpp sprite_draw_list.h
     missingno.png.h
-    i_camera.h
-    camera_simple_ortho.cpp camera_simple_ortho.h
+    camera.cpp camera.h
     api.h)
 
 target_link_libraries(render_core
