--- a/src/engine/render/dx11/CMakeLists.txt
+++ b/src/engine/render/dx11/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(render_dx11
+add_library(render_backend
     render_context_dx11.cpp render_context_dx11.h
     im3d_dx11.cpp im3d_dx11.h
     util.cpp util.h
@@ -8,7 +8,7 @@ add_library(render_dx11
 find_library(DIRECTXTK_LIBRARY DirectXTK)
 find_path(DIRECTXTK_INCLUDE DirectXTK/CommonStates.h)
 
-target_link_libraries(render_dx11
+target_link_libraries(render_backend
     PUBLIC
         engine
         render_core
@@ -18,6 +18,6 @@ target_link_libraries(render_dx11
         dxgi
         ${DIRECTXTK_LIBRARY})
 
-target_include_directories(render_dx11 PRIVATE ${DIRECTXTK_INCLUDE})
+target_include_directories(render_backend PRIVATE ${DIRECTXTK_INCLUDE})
 
-target_precompile_headers(render_dx11 PRIVATE pch.h)
+target_precompile_headers(render_backend PRIVATE pch.h)
