add basic audio support

--- a/src/engine/CMakeLists.txt
+++ b/src/engine/CMakeLists.txt
@@ -12,6 +12,7 @@ add_library(engine
     tileset_helper.cpp tileset_helper.h
     engine.cpp engine.h
     input.cpp input.h
+    audio.cpp audio.h
     key_codes.h
     ui_extensions.cpp ui_extensions.h
     api.h
@@ -28,13 +29,14 @@ target_compile_definitions(engine
     NOMINMAX)
 
 find_package(SDL2 CONFIG REQUIRED)
+find_package(SDL2-Mixer CONFIG REQUIRED)
 find_package(fmt CONFIG REQUIRED)
 find_package(imgui CONFIG REQUIRED)
 find_package(glm CONFIG REQUIRED)
 
 target_link_libraries(engine
     PUBLIC
-        SDL2::SDL2 SDL2::SDL2main
+        SDL2::SDL2 SDL2::SDL2main SDL2::SDL2_mixer
         fmt::fmt fmt::fmt-header-only
         imgui::imgui
         glm
